# Sussurro

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: pages.yml  release.yml  test.yml
docs/: README.md  development.md  index.html  releases.md  robots.txt  sitemap.xml  whisperflow-clone-research.md  windows-signing-signpath.md
docs/assets/: blog.css
docs/blog/: ai-cleanup-levels.html  audio-file-transcription.html  building-from-source.html  centralized-ollama.html  choosing-ollama-model.html  cleanup-hallucination-guard.html  clipboard-injection.html  command-mode.html  dictate-to-file.html  first-run.html  how-the-pipeline-works.html  index.html  language-selection.html  linux-injection.html  local-api.html  macos-signing-gatekeeper.html  mic-selector-vu.html  per-app-tone.html  portable-config.html  searchable-history.html  self-learning-dictionary.html  shortcuts-and-triggers.html  streaming-typing.html  translate-as-you-speak.html  use-ds4.html  voice-commands.html  voice-snippets.html  where-data-lives.html  whisper-mode.html  whisper-vs-parakeet.html  why-local-first.html
docs/compile/: linux.md  macos.md  windows.md
docs/superpowers/plans/: 2026-07-02-sussurro-v1.md
flatpak/: com.sussurro.app.yml
scripts/: build-linux-release.sh  ci-local.sh  sign-linux-bundles.sh
site/: README.md  index.html
site/assets/: blog.css
site/blog/: ai-cleanup-levels.html  audio-file-transcription.html  building-from-source.html  centralized-ollama.html  choosing-ollama-model.html  cleanup-hallucination-guard.html  clipboard-injection.html  command-mode.html  dictate-to-file.html  first-run.html  how-the-pipeline-works.html  index.html  language-selection.html  linux-injection.html  local-api.html  macos-signing-gatekeeper.html  mic-selector-vu.html  per-app-tone.html  portable-config.html  searchable-history.html  self-learning-dictionary.html  shortcuts-and-triggers.html  streaming-typing.html  translate-as-you-speak.html  voice-commands.html  voice-snippets.html  where-data-lives.html  whisper-mode.html  whisper-vs-parakeet.html  why-local-first.html
sussurro/: index.html  package-lock.json  package.json
sussurro/public/: licenses.json
sussurro/scripts/: gen-licenses.mjs
sussurro/src/: App.css  App.tsx  Overlay.css  Overlay.tsx  main.tsx
sussurro/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
sussurro/src-tauri/.cargo/: config.toml
sussurro/src-tauri/capabilities/: default.json
sussurro/src-tauri/icons/: icon.icns
sussurro/src-tauri/src/: api.rs  commands.rs  config_io.rs  history.rs  hotkey.rs  inject.rs  lib.rs  main.rs  permissions.rs  pipeline.rs  settings.rs  snippets.rs  state.rs  stats.rs  tray.rs  voice_commands.rs  wayland_portal.rs
sussurro/src-tauri/src/audio/: beep.rs  decode.rs  mod.rs  recorder.rs  resample.rs
sussurro/src-tauri/src/cleanup/: mod.rs  ollama.rs  prompt.rs
sussurro/src-tauri/src/stt/: mod.rs  models.rs  parakeet.rs  whisper.rs
