[package]
name = "sussurro"
version = "0.5.0"
description = "Fully-local voice dictation for Windows, macOS and Linux"
authors = ["Francesco Fullone (DarumaHQ)"]
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sussurro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["wayland-portal"]
# Opt-in GPU transcription on Linux (CPU-only by default so contributor and
# CI builds don't need the Vulkan SDK). Build with:
#   npm run tauri build -- --features linux-vulkan
# Requires vulkan headers + glslc at build time; users need a Vulkan driver.
linux-vulkan = ["whisper-rs/vulkan"]
# Text injection via the XDG RemoteDesktop portal on Wayland (issue #40) —
# the only zero-setup path on KDE/GNOME, where the virtual-keyboard protocol
# is closed to external clients. Disable to drop the ashpd/zbus tree.
wayland-portal = ["dep:ashpd", "dep:tokio"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.103"
chrono = "0.4.45"
cpal = "0.16"
enigo = "0.6.1"
arboard = "3.6.1"
whisper-rs = "0.16.0"
tauri-plugin-global-shortcut = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
tauri-plugin-autostart = "2.5.1"
transcribe-rs = { version = "0.3.11", features = ["onnx"] }
flate2 = "1.1.9"
tar = "0.4.46"
sha2 = "0.10"
active-win-pos-rs = "0.11.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.7.1"
symphonia = { version = "0.5.4", features = ["mp3", "isomp4", "aac"] }
regex = "1.12.4"
tiny_http = "0.12.0"

# GPU acceleration per platform: Vulkan on Windows (needs the Vulkan SDK at
# build time), Metal on macOS (ships with Xcode). Linux stays CPU-only by
# default so contributor builds don't require the SDK.
[target.'cfg(windows)'.dependencies]
whisper-rs = { version = "0.16.0", features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["metal"] }
# Microphone (AVFoundation) + Accessibility (AXIsProcessTrusted) permission
# checks. objc2 versions match the ones already in the tree (via tauri).
objc2 = "0.6"
objc2-foundation = "0.3"

# Native Wayland clipboard (wlr-data-control protocol) — without this arboard
# only reaches the XWayland clipboard on Wayland sessions. ashpd/tokio back
# the RemoteDesktop-portal injection (wayland-portal feature).
[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
# remote_desktop needs screencast too: its module imports screencast::Stream.
ashpd = { version = "0.13", features = ["remote_desktop", "screencast"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tempfile = "3.27.0"

